--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&family=Nunito&display=swap" rel="stylesheet" />
     <title>Food Network</title>
+    <link rel="icon" type="image/x-icon" href="/images/images/Group 8425.png" />
     <link rel="stylesheet" href="style.css" />
   </head>
 
